# ac2023

./: .gitignore  README.md  ac2023.cabal
day01/src/: main.zig
day02/: day02.cabal
day02/app/: Main.hs
day03/: day03.cabal  day03.cabal.save0
day03/app/: Main.hs
day04/: Main.hs  a.hs
day05/: Main.hs
day06/: Main.hs
day07/: Main.hs  hand.in
day08/: Main.hs  b.rb
day09/: Main.hs
day10/: a.rb  b.rb
day11/: Main.hs
day12/: a.rb  b.rb
day13/: Main.hs
day14/: Main.hs  b.rb
day15/: Main.hs
day16/: Main.hs
day17/: a.rb  b.rb
day18/: Main.hs  b.rb
day19/: Main.hs
day20/: Makefile  a.rb  b.rb  viz.rb
