cabal-version:      2.4
name:               ac2023
version:            0.1.0.0

author:             hkdnet
maintainer:         satoko.itse@gmail.com

extra-source-files: CHANGELOG.md

executable day02
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
    hs-source-dirs:   day02/app
    default-language: GHC2021

executable day03
    main-is:          Main.hs

    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   day03/app
    default-language: GHC2021

executable day04
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
    hs-source-dirs:   day04
    default-language: GHC2021

executable day05
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
    hs-source-dirs:   day05
    default-language: GHC2021
