cabal-version:      2.4
name:               ac2023
version:            0.1.0.0

author:             hkdnet
maintainer:         satoko.itse@gmail.com

extra-source-files: CHANGELOG.md

executable day02
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
    hs-source-dirs:   day02/app
    default-language: GHC2021

executable day03
    main-is:          Main.hs

    build-depends:    base ^>=4.17.2.0
    hs-source-dirs:   day03/app
    default-language: GHC2021

executable day04
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
    hs-source-dirs:   day04
    default-language: GHC2021

executable day05
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
    hs-source-dirs:   day05
    default-language: GHC2021

executable day06
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
    hs-source-dirs:   day06
    default-language: GHC2021

executable day07
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
    hs-source-dirs:   day07
    default-language: GHC2021

executable day08
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
    hs-source-dirs:   day08
    default-language: GHC2021

executable day09
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
        , vector >= 0.13.1.0
        , split >= 0.2.4
    hs-source-dirs:   day09
    default-language: GHC2021

executable day11
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
        , vector >= 0.13.1.0
    hs-source-dirs:   day11
    default-language: GHC2021

executable day13
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
        , vector >= 0.13.1.0
        , split >= 0.2.4
    hs-source-dirs:   day13
    default-language: GHC2021

executable day14
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
        , vector >= 0.13.1.0
        , split >= 0.2.4
    hs-source-dirs:   day14
    default-language: GHC2021

executable day15
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
        , vector >= 0.13.1.0
        , split >= 0.2.4
    hs-source-dirs:   day15
    default-language: GHC2021

executable day16
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
        , vector >= 0.13.1.0
        , split >= 0.2.4
    hs-source-dirs:   day16
    default-language: GHC2021

executable day18
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
        , vector >= 0.13.1.0
        , split >= 0.2.4
    hs-source-dirs:   day18
    default-language: GHC2021

executable day19
    main-is:          Main.hs

    build-depends:
        , base ^>=4.17.2.0
        , parsec >= 3.1.17.0
        , containers >= 0.7
        , vector >= 0.13.1.0
        , split >= 0.2.4
    hs-source-dirs:   day19
    default-language: GHC2021
